--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1> hola alumnes </h1>
     <h2>Adria Novell</h2>
-    <h3>hola carcola</h3>
+    <h3>hola carcola :)</h3>
 </body>
 </html>
