--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> hola alumnes </h1>
-    <h2>Adria Novell</h2>
-    <h3>hola carcola :)</h3>
+    <h1>MI PAGINA WEB :)</h1>
 </body>
 </html>
