--- a/activitats/html/02 formato/activitat 4.html
+++ b/activitats/html/02 formato/activitat 4.html
@@ -1,2 +1,2 @@
 <h1>Actualidad</h1>
-<P>La <strong>sintáxis HTML</strong>es altamente demandado en el actual panorama tecnológico </P>
+<P>La <strong>sintáxis HTML</strong>es altamente demandado en el actual <i>panorama tecnológico</i> </P>
