--- a/activitats/html/02 formato/activitat 1.html
+++ b/activitats/html/02 formato/activitat 1.html
@@ -1,3 +1,3 @@
-<p>Et molestie ac, feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi <br> tincidunt ornare. Consequat interdum varius sit amet, mattis vulputate enim nulla aliquet<br> porttitor lacus, luctus accumsan tortor! <br> </p>
-<p>porta lorem mollis aliquam ut porttitor leo a diam sollicitudin tempor id eu nisl nunc mi <br>ipsum, faucibus vitae? Malesuada fames ac turpis egestas integer eget aliquet nibh praesent.</p> 
+<p>Et molestie ac, feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi <br> tincidunt ornare. Consequat interdum varius sit amet, mattis vulputate enim nulla aliquet<br> porttitor lacus, luctus accumsan tortor! <br>
+porta lorem mollis aliquam ut porttitor leo a diam sollicitudin tempor id eu nisl nunc mi <br>ipsum, faucibus vitae? Malesuada fames ac turpis egestas integer eget aliquet nibh praesent.</p>
     
