--- a/activitats/html/02 formato/activitat 3.html
+++ b/activitats/html/02 formato/activitat 3.html
@@ -1,7 +1,7 @@
-<h1>Aqui estoy gastando h1</h1>
-<h2>Aqui estoy gastando h2</h2>
-<h3>Aqui estoy gastando h3</h3>
-<h4>Aqui estoy gastando h4</h4>
-<h5>Aqui estoy gastando h5</h5>
-<h6>Aqui estoy gastando h6</h6>
+<h1>Aqui estoy gastando h1</h1> <br>
+<h2>Aqui estoy gastando h2</h2> <br>
+<h3>Aqui estoy gastando h3</h3> <br>
+<h4>Aqui estoy gastando h4</h4> <br>
+<h5>Aqui estoy gastando h5</h5> <br>
+<h6>Aqui estoy gastando h6</h6> <br>
 <p>Yo soy un sencillo párrafo</p>
