--- a/activitats/html/02 formato/activitat 7.html
+++ b/activitats/html/02 formato/activitat 7.html
@@ -1,4 +1,12 @@
-<h1>Mis últimas vacaciones</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Mis últimas vacaciones</h1>
 <p>En mis ultimas vaciones fui a la playa, ya que tenemos un apartamento ahi, en <strong>Salou.</strong> <br>
 Una vez llegamos ahi empezamos a descargar todas las maletas y cosas que llevábamos, al acabar decidimos planificar que seria lo que hariamos los dias que estabamos ahi, mi padre y yo dijimos de ir a la playa, mientras que mi hermana decia que queria ir a la piscina de la urbanizacion. <br>
 Al final el primer dia fuimos a la playa, a hacer <i>snorkel y submarinismo,</i> ya que mi padre y yo somos grandes aficionados.
@@ -10,3 +18,6 @@ Cuando ya llevábamos 1 o 2 horas navegando, decidimos parar para poder bañarno
 A las 3 o 4 horas volvimos a dejar el barco donde lo cojimos y nos fuimos a comer, al acabar de comer volvimos a casa y hicimos un rato de siesta para descansar un poco. <br>
 Y luego por la noche fuimos a cenar y a pasear un poco por las calles cercanas a la playa.
 Al dia siguiente al tenernos que ir por el mediodia fue bastante tranquilo, por la mañana sacamos al perro y luego estuvimos lo que quedaba de la mañana en la piscina. Despues de la hora de comer volvimos otra vez a <strong>Lleida.</strong></p>
+
+</body>
+</html>
