--- a/activitats/html/02 formato/activitat 6.html
+++ b/activitats/html/02 formato/activitat 6.html
@@ -1,4 +1,12 @@
-<h1>Julio Verne</h1> <br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Julio Verne</h1> <br>
 <strong>Jules Gabriel Verne,</strong> conocido en los países hispanohablantes como <strong>Julio Verne</strong> <br>
  <i>(Nantes, 8 de febrero de 1828-Amiens, 24 de marzo de 1905),</i> fue un escritor, poeta y <br>
   dramaturgo francés célebre por sus <strong>novelas de aventuras</strong> y por su profunda <br>
@@ -10,3 +18,6 @@
   creación de Viajes extraordinarios, una popular serie de novelas de aventuras <br>
   escrupulosamente documentadas y visionarias entre las que se incluían las famosas <br>
   <i>Cinco semanas en globo (1863), Viaje al centro de la Tierra (1864), De la Tierra a la Luna (1865), Veinte mil leguas de viaje submarino (1870), La vuelta al mundo en ochenta días (1872) o La isla misteriosa (1874).</i>
+
+</body>
+</html>
