--- a/activitats/html/02 formato/activitat 2.html
+++ b/activitats/html/02 formato/activitat 2.html
@@ -1,4 +1,12 @@
-<h1>Titulo principal con h1</h1> <br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Titulo principal con h1</h1> <br>
     <p>Et molestie ac, feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper <br> morbi tincidunt ornare. Consequat interdum varius sit amet, mattis vulputate enim nulla <br> porttitor lacus, luctus accumsan tortor!</p> <br>
     <h2>Titulo secundario con h2</h2> <br>
     <p>Nisi porta lorem mollis aliquam ut porttitor leo a diam sollicitudin tempor id eu nisl nunc <br> mi ipsum, faucibus vitae? Malesuada fames ac turpis egestas integer eget aliquet nibh <br> praesent.</p> <br>
@@ -6,3 +14,5 @@
     <p>Pharetra, massa massa ultricies mi, quis hendrerit dolor magna eget est lorem ipsum <br> dolor. Sagittis orci, a scelerisque purus semper eget duis at tellus at urna condimentum <br> pellentesque id.</p>
 
     
+</body>
+</html>
