--- a/activitats/html/02 formato/activitat 1.html
+++ b/activitats/html/02 formato/activitat 1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Et molestie ac, feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi <br> tincidunt ornare. Consequat interdum varius sit amet, mattis vulputate enim nulla aliquet<br> porttitor lacus, luctus accumsan tortor! <br>
+    <p>Et molestie ac, feugiat sed lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi <br> tincidunt ornare. Consequat interdum varius sit amet, mattis vulputate enim nulla aliquet<br> porttitor lacus, luctus accumsan tortor! <br> <br>
         porta lorem mollis aliquam ut porttitor leo a diam sollicitudin tempor id eu nisl nunc mi <br>ipsum, faucibus vitae? Malesuada fames ac turpis egestas integer eget aliquet nibh praesent.</p>
             
 </body>
