--- a/activitats/html/02 formato/activitat 7.html
+++ b/activitats/html/02 formato/activitat 7.html
@@ -8,15 +8,15 @@
 <body>
     <h1>Mis últimas vacaciones</h1>
 <p>En mis ultimas vaciones fui a la playa, ya que tenemos un apartamento ahi, en <strong>Salou.</strong> <br>
-Una vez llegamos ahi empezamos a descargar todas las maletas y cosas que llevábamos, al acabar decidimos planificar que seria lo que hariamos los dias que estabamos ahi, mi padre y yo dijimos de ir a la playa, mientras que mi hermana decia que queria ir a la piscina de la urbanizacion. <br>
+Una vez llegamos ahi empezamos a descargar todas las maletas y cosas que llevábamos, al acabar decidimos planificar que seria lo que hariamos los dias que estabamos ahi, mi padre y yo dijimos de ir a la playa, <br> mientras que mi hermana decia que queria ir a la piscina de la urbanizacion. <br>
 Al final el primer dia fuimos a la playa, a hacer <i>snorkel y submarinismo,</i> ya que mi padre y yo somos grandes aficionados.
 Al acabar decidimos ir a comer algo a un chiringito que habia delante de la playa, y al acabar volvimos al apartamento otra vez. <br>
 Por la tarde mientras mi hermana estaba en la piscina mi padre y yo fuimos a sacar al perro por la montaña, y al acabar nos arreglamos los 3 para ir a cenar fuera. <br>
 En el segundo dia mi padre nos sorprendio cuando dijo que habia alquilado un barco para pasar el dia, y eso fue lo que hicimos. <br>
 Al llegar nos enseñaron como funcionaba el barco y cuales eran las medidas de seguridad que teniamos que hacer en el caso de que pasara algun problema.
-Cuando ya llevábamos 1 o 2 horas navegando, decidimos parar para poder bañarnos en el mar, estuvimos un rato bañandonos y volvimos al barco. <br>
+Cuando ya llevábamos 1 o 2 horas navegando, <br> decidimos parar para poder bañarnos en el mar, estuvimos un rato bañandonos y volvimos al barco. <br>
 A las 3 o 4 horas volvimos a dejar el barco donde lo cojimos y nos fuimos a comer, al acabar de comer volvimos a casa y hicimos un rato de siesta para descansar un poco. <br>
-Y luego por la noche fuimos a cenar y a pasear un poco por las calles cercanas a la playa.
+Y luego por la noche fuimos a cenar y a pasear un poco por las calles cercanas a la playa. <br>
 Al dia siguiente al tenernos que ir por el mediodia fue bastante tranquilo, por la mañana sacamos al perro y luego estuvimos lo que quedaba de la mañana en la piscina. Despues de la hora de comer volvimos otra vez a <strong>Lleida.</strong></p>
 
 </body>
