--- a/activitats/html/03 hipervinculos/activitat 2.html
+++ b/activitats/html/03 hipervinculos/activitat 2.html
@@ -10,5 +10,6 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda, quos numquam magni <br>
          nesciunt molestiae et necessitatibus consequuntur cum repellendus, amet similique nam <br> quod aliquid quae deserunt commodi excepturi vero unde!</p>
          <a href="https://www.restaurantedonghu.com/es/carta.html">ver imagen</a>
+         <h1>Familia</h1>
 </body>
 </html>
