--- a/activitats/html/03 hipervinculos/activitat 2.html
+++ b/activitats/html/03 hipervinculos/activitat 2.html
@@ -11,5 +11,8 @@
          nesciunt molestiae et necessitatibus consequuntur cum repellendus, amet similique nam <br> quod aliquid quae deserunt commodi excepturi vero unde!</p>
          <a href="https://www.restaurantedonghu.com/es/carta.html">ver imagen</a>
          <h1>Familia</h1>
+         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore adipisci unde, est, ut <br>
+        quisquam obcaecati reprehenderit aspernatur animi pariatur maxime inventore atque aliquid. <br>
+    Officiis cumque voluptas perspiciatis odit optio quisquam?</p>
 </body>
 </html>
