--- a/activitats/html/03 hipervinculos/activitat 2.html
+++ b/activitats/html/03 hipervinculos/activitat 2.html
@@ -14,5 +14,6 @@
          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore adipisci unde, est, ut <br>
         quisquam obcaecati reprehenderit aspernatur animi pariatur maxime inventore atque aliquid. <br>
     Officiis cumque voluptas perspiciatis odit optio quisquam?</p>
+    <a href="https://www.ginos.es/menus/menu-infantil">ver imagen</a>
 </body>
 </html>
