--- a/activitats/html/formato.html
+++ b/activitats/html/formato.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-   <a href="html/formato.html"> formato</a>
-   <br>
-   <br>
-   <a href="html/03 hipervinculos/">hipervinculos</a>
-</body>
+    <h2>Formato</h2>
+    <a href="02 formato/activitat1.html">actividad 1</a>
+    <br><br>
+    <a href="02 formato/activitat 2.html">actividad 2</a>
 </html>
