--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>MI PAGINA WEB :)</h1>
-   <a href="activitats/activitats.html">activitats</a>
+   <a href="activitats/activitats.html">activitats html</a>
+   <a href="activitats/css/">activitats css</a>
 </body>
 </html>
