--- a/activitats/html/formato.html
+++ b/activitats/html/formato.html
@@ -9,5 +9,16 @@
     <h2>Formato</h2>
     <a href="02 formato/activitat1.html">actividad 1</a>
     <br><br>
-    <a href="02 formato/activitat 2.html">actividad 2</a>
+    <a href="02 formato/actividad2.html">actividad 2</a>
+    <br><br>
+    <a href="02 formato/actividad3.html">actividad 3</a>
+    <br><br>
+    <a href="02 formato/actividad4.html">actividad 4</a>
+    <br><br>
+    <a href="02 formato/actividad5.html">actividad 5</a>
+    <br><br>
+    <a href="02 formato/actividad6.html">actividad 6</a>
+    <br><br>
+    <a href="02 formato/actividad7.html">actividad 7</a>
+
 </html>
