--- a/activitats/activitats.html
+++ b/activitats/activitats.html
@@ -6,9 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-   <a href="html/formato.html"> formato</a>
-   <br>
-   <br>
-   <a href="html/03 hipervinculos/">hipervinculos</a>
+    <H1>HTML</H1>
+   <a href="html/formato.html"> <h2>Formato</h2></a>
+   <a href="html/03 hipervinculos/"><H2>hipervinculos</H2></a>
 </body>
 </html>
