--- a/activitats/html/hipervinculos.html
+++ b/activitats/html/hipervinculos.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>HTML</H1>
-   <a href="html/formato.html"> <h2>Formato</h2></a>
-   <a href="html/hipervinculos.html"><H2>Hipervinculos</H2></a>
+    <h2>Hipervinculos</h2>
+    <a href="03 hipervinculos/actividad1.html">Actividad 1</a>
+    <br><br>
+    <a href="03 hipervinculos/actividad2.html">Actividad 2</a>
 </body>
 </html>
