--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>MI PAGINA WEB :)</h1>
-   <a href="activitats/activitats.html">activitats html</a>
-   <a href="activitats/css/">activitats css</a>
+   <a href="activitats/activitats.html"><h2>Actividades html</h2></a>
+   <a href="activitats/css/"><h2>Actividades css</h2></a>
 </body>
 </html>
