--- a/activitats/html/03 hipervinculos/actividad3.html
+++ b/activitats/html/03 hipervinculos/actividad3.html
@@ -9,9 +9,12 @@
     <body>
         <article class="group post">
             <p> <h1>Index</h1></p>
+            <a href="#PRIMER ACTO">Primer acto</a>
+            <br>
+            <a href="#SEGUNDOACTO">Segundo acto</a>
             <h1 class="title">Guión obra de teatro</h1>
             Guión obra de teatro
-            <p align="center">PRIMER ACTO</p>
+            <p id ="PRIMER ACTO" "center">PRIMER ACTO</p>
             <p>El baño del departamento de Mónica. Un baño muy bien amueblado y con acabados lujosos. La puerta está del lado izquierdo. Azulejos de color amarillo pastel con figurillas que se engarzan entre sí. El lavamanos tiene dos puertas en la parte inferior, un espejo encima que toca el techo, al lado derecho un retrete y a la diestra de este se encuentra la tina de hidromasaje. Tres cuadros decorativos. Jabones de colores y una maceta.</p>
             <p align="center">ESCENA I</p>
             <p>Mónica entra al baño, trae en la mano un teléfono inalámbrico, cierra la puerta y se mira en el espejo de forma pensativa y como reconociéndose a sí misma, mirándose extrañada como si su reflejo no fuera el de ella misma. Se toca la cara.</p>
