--- a/activitats/html/hipervinculos.html
+++ b/activitats/html/hipervinculos.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h2>Hipervinculos</h2>
-    <a href="03 hipervinculos/actividad1.html">Actividad 1</a>
+    <a href="03_hipervinculos/actividad1.html">Actividad 1</a>
     <br><br>
-    <a href="03 hipervinculos/actividad2.html">Actividad 2</a>
+    <a href="03_hipervinculos/actividad2.html">Actividad 2</a>
+    <br><br>
+    <a href="03_hipervinculos/actividad3.html">Actividad 3</a>
 </body>
 </html>
