--- a/activitats/html/04_listas/actividad1.html
+++ b/activitats/html/04_listas/actividad1.html
@@ -6,9 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>HTML</H1>
-   <a href="html/formato.html"> <h2>Formato</h2></a>
-   <a href="html/hipervinculos.html"><H2>Hipervinculos</H2></a>
-   <a href="html/listas.html"><h2>Listas</h2></a>
+    <h1>Periódicos</h1>
+    <ul>
+        <li>El Mundo Today</li>
+        <li>People</li>
+        <li>USA Today</li>
+        <li>Times</li>
+    </ul>
 </body>
 </html>
