--- a/activitats/html/listas.html
+++ b/activitats/html/listas.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <H1>HTML</H1>
-   <a href="html/formato.html"> <h2>Formato</h2></a>
-   <a href="html/hipervinculos.html"><H2>Hipervinculos</H2></a>
-   <a href="html/listas.html"><h2>Listas</h2></a>
+    <h2>Listas</h2>
+    <a href="04_listas/actividad1.html">Actividad 1</a>
+    <br><br>
+    <a href="04_listas/actividad2.html">Actividad 2</a>
 </body>
 </html>
