--- a/activitats/html/listas.html
+++ b/activitats/html/listas.html
@@ -10,5 +10,7 @@
     <a href="04_listas/actividad1.html">Actividad 1</a>
     <br><br>
     <a href="04_listas/actividad2.html">Actividad 2</a>
+    <br><br>
+    <a href="04_listas/actividad3.html">Actividad 3</a>
 </body>
 </html>
