--- a/activitats/html/listas.html
+++ b/activitats/html/listas.html
@@ -12,5 +12,9 @@
     <a href="04_listas/actividad2.html">Actividad 2</a>
     <br><br>
     <a href="04_listas/actividad3.html">Actividad 3</a>
+    <br><br>
+    <a href="04_listas/actividad4.html">Actividad 4</a>
+    <br><br>
+    <a href="04_listas/actividad5.html">Actividad 5</a>
 </body>
 </html>
