--- a/activitats/html/02_formato/actividad6.html
+++ b/activitats/html/02_formato/actividad6.html
@@ -17,7 +17,9 @@
   literatura. Su colaboración con el editor <strong>Pierre-Jules</strong> Hetzel dio como fruto la <br>
   creación de Viajes extraordinarios, una popular serie de novelas de aventuras <br>
   escrupulosamente documentadas y visionarias entre las que se incluían las famosas <br>
-  <i>Cinco semanas en globo (1863), Viaje al centro de la Tierra (1864), De la Tierra a la Luna (1865), Veinte mil leguas de viaje submarino (1870), La vuelta al mundo en ochenta días (1872) o La isla misteriosa (1874).</i>
+  <i>Cinco semanas en globo (1863), Viaje al centro de la Tierra (1864), De la Tierra a la <br>
+  Luna (1865), Veinte mil leguas de viaje submarino (1870), La vuelta al mundo en <br>
+  ochenta días (1872) o La isla misteriosa (1874). <br> </i>
 
 </body>
 </html>
