--- a/actividades/html/05_imagenes/actividad1.html
+++ b/actividades/html/05_imagenes/actividad1.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Cafetería</h1>
+    <p>Eget egestas purus viverra accumsan in nisl? Eget duis at tellus at urna <br>
+    condimentum mattis pellentesque id nibh tortor, id aliquet lectus proin <br> 
+    nibh nisl, condimentum id venenatis a, condimentum</p>
+    <h2>Dueño</h2>
+    <img src="https://th.bing.com/th/id/OIP.UghT0woG1H9eTHb_F0LXyAHaFA?rs=1&pid=ImgDetMain" alt="">
+    <h2>Competencia</h2>
+    <p>Cursus vitae congue mauris rhoncus aenean vel elit scelerisque mauris <br>
+    pellentesque pulvinar pellentesque habitant morbi tristique. Tortor posuere <br>
+    ac ut consequat semper viverra nam libero justo, laoreet sit amet cursus.</p>
+    <img  width="475" src="https://th.bing.com/th/id/R.92edeeb04b7c485374f6f134b96ee81f?rik=yveIa2lLpUwxFg&riu=http%3a%2f%2fanimalmascota.com%2fwp-content%2f2013%2f08%2fcollar-isabelino-perros-1.jpg&ehk=iTMByZj7uUu4q90kh5v8uYlb4l%2ffWD%2bFClat6Xq88Qk%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1" alt="">
 </body>
 </html>
