--- a/actividades/html/05_imagenes/actividad2.html
+++ b/actividades/html/05_imagenes/actividad2.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Redes sociales</h1>
+    <img src="https://th.bing.com/th/id/R.a33edfc6608bc6fec73bf08c685dbe1e?rik=zXajz428EfVJGw&pid=ImgRaw&r=0" alt="foto facebook" width="200" height="250"> 
 </body>
 </html>
