--- a/actividades/html/05_imagenes/actividad4.html
+++ b/actividades/html/05_imagenes/actividad4.html
@@ -24,5 +24,34 @@
       <li>4 Huevos.</li>
       <li>Aceite de girasol.</li>
     </ul>
+    <h2>Preparación: Como hacer torrijas tradicionales.</h2>
+    <ol>
+      <li>
+        En un cazo, ponemos a calentar la leche junto con la cáscara de limón y
+        de naranja, la rama de canela y una cucharada sopera de azúcar.
+      </li>
+      <li>Cuándo ya esté caliente, apartamos del fuego y dejamos templar.</li>
+      <li>
+        Cortamos el pan, en rodajas, un poco gruesas de unos 2 cm
+        aproximadamente.
+      </li>
+      <li>
+        Ya cortado el pan en rodajas, batimos los huevos y empezamos a mojar el
+        pan, primero en la leche y luego en el huevo.
+      </li>
+      <li>
+        En una sartén, ponemos a calentar aceite abundante y bien caliente, y
+        freímos las torrijas en tandas.
+      </li>
+      <li>
+        En una bandeja, ponemos el azúcar y canela en polvo y mezclamos bien. <br>
+        Cuándo las torrijas estén aun un poco templadas, las rebozamos en el
+        azúcar con la canela y las dejamos en una fuente.
+      </li>
+      <li>
+        Cuándo ya las tengo en la fuente todas las torrijas, suelo rociarlas con
+        un poco de leche para que se queden jugositas.
+      </li>
+    </ol>
 </body>
 </html>
