--- a/actividades/html/05_imagenes/actividad2.html
+++ b/actividades/html/05_imagenes/actividad2.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Redes sociales</h1>
-    <img src="https://th.bing.com/th/id/R.a33edfc6608bc6fec73bf08c685dbe1e?rik=zXajz428EfVJGw&pid=ImgRaw&r=0" alt="foto facebook" width="200" height="250"> 
+    <img src="https://th.bing.com/th/id/R.a33edfc6608bc6fec73bf08c685dbe1e?rik=zXajz428EfVJGw&pid=ImgRaw&r=0" alt="foto facebook" width="100" height="100"> <br>
+    <img src="https://th.bing.com/th/id/R.c88ba29e8033d6887b13be906c023489?rik=UZxH7o5rDXW6Vw&pid=ImgRaw&r=0" alt="foto twitter" width="100" height="100"> <br>
+    <img src="https://th.bing.com/th/id/R.4621c2959554905f8661d29a64811cc4?rik=WXyDF6zAP%2fgAfg&riu=http%3a%2f%2f1000logos.net%2fwp-content%2fuploads%2f2017%2f05%2fOld-YouTube-logo.jpg&ehk=dWyFrsk3Dn0i869AXC%2bHqQZJE%2fKO6ZL%2fDvESWfLuH9U%3d&risl=&pid=ImgRaw&r=0" alt="foto youtube" width="100" height="100">
 </body>
 </html>
