--- a/actividades/html/05_imagenes/actividad1.html
+++ b/actividades/html/05_imagenes/actividad1.html
@@ -20,7 +20,7 @@
     pellentesque pulvinar pellentesque habitant morbi tristique. Tortor posuere <br>
     ac ut consequat semper viverra nam libero justo, laoreet sit amet cursus.</p>
     <img 
-    src="https://th.bing.com/th/id/R.92edeeb04b7c485374f6f134b96ee81f?rik=yveIa2lLpUwxFg&riu=http%3a%2f%2fanimalmascota.com%2fwp-content%2f2013%2f08%2fcollar-isabelino-perros-1.jpg&ehk=iTMByZj7uUu4q90kh5v8uYlb4l%2ffWD%2bFClat6Xq88Qk%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1" 
+    src="https://th.bing.com/th/id/OIP.vM5R3TcKCf1h5FnvsIKjewD6D6?rs=1&pid=ImgDetMain" 
     alt="perro con collar isabelino"
     >
 </body>
