--- a/actividades/html/imagenes.html
+++ b/actividades/html/imagenes.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h2>Imagenes</h2>
+    <a href="05_imagenes/actividad1.html">Actividad 1</a>
+    <br><br>
+    <a href="05_imagenes/actividad2.html">Actividad 2</a>
+    <br><br>
+    <a href="05_imagenes/actividad3.html">Actividad 3</a>
+    <br><br>
+    <a href="05_imagenes/actividad4.html">Actividad 4</a>
 </body>
 </html>
