--- a/actividades/activitats.html
+++ b/actividades/activitats.html
@@ -10,5 +10,7 @@
    <a href="html/formato.html"> <h2>Formato</h2></a>
    <a href="html/hipervinculos.html"><H2>Hipervinculos</H2></a>
    <a href="html/listas.html"><h2>Listas</h2></a>
+   <a href="html/imagenes.html"><h2>Imagenes</h2></a>
+   <a href="html/tablas.html"><h2>Tablas</h2></a>
 </body>
 </html>
