--- a/actividades/html/06_Tablas/actividad2.html
+++ b/actividades/html/06_Tablas/actividad2.html
@@ -6,6 +6,40 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <table>
+        <caption>Personas que no me gustan</caption>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Edad</th>
+                <th>Genero</th>
+                <th>Porque no me gusta</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Jesse</td>
+                <td>Rapczak</td>
+                <td>42</td>
+                <td>Hombre</td>
+                <td>Siempre saca tarde las actualizaciones</td>
+            </tr>
+            <tr>
+                <td>Lionel</td>
+                <td>Messi</td>
+                <td>36</td>
+                <td>Hombre</td>
+                <td>Soy del Madrid</td>
+            </tr>
+            <tr>
+                <td>Vladímir</td>
+                <td>Putin</td>
+                <td>71</td>
+                <td>Hombre</td>
+                <td>La guerra que a provocado</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
