--- a/actividades/html/tablas.html
+++ b/actividades/html/tablas.html
@@ -9,5 +9,6 @@
     <h2>Tablas</h2>
     <a href="06_Tablas/actividad1.html">Actividad 1</a>
     <br><br>
+    <a href="06_Tablas/actividad2.html">Actividad 2</a>
 </body>
 </html>
