--- a/actividades/html/tablas.html
+++ b/actividades/html/tablas.html
@@ -10,5 +10,7 @@
     <a href="06_Tablas/actividad1.html">Actividad 1</a>
     <br><br>
     <a href="06_Tablas/actividad2.html">Actividad 2</a>
+    <br><br>
+    <a href="06_Tablas/actividad3.html">Actividad 3</a>
 </body>
 </html>
