--- a/proba.html
+++ b/proba.html
@@ -4,20 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-
-  li { color: red;
-    background-color: beige;}
-
-    span {color: pink;}
-
-    #groc {color: green;}
-
-    .yellow {color: blue;
-        background-color: aqua;}
-
-
-    </style>
+    <link rel="stylesheet" href="estils.css">
 </head>
 <body>
     <h1 style="color:aquamarine;"> Alumnes</h1>
