--- a/actividades/html/06_Tablas/actividad3.html
+++ b/actividades/html/06_Tablas/actividad3.html
@@ -18,7 +18,7 @@
         </thead>
         <tbody>
             <tr>
-                <td>imagen</td>
+                <td><img src="imagenes/R.jpg" height="300" width="250" alt=""></td> 
                 <td>Nombre: Adria Novell <br>
                     Edad: 19 <br>
                     Correo electronico: anovell2@inscaparrella.cat <br>
