--- a/actividades/html/03_hipervinculos/actividad1.html
+++ b/actividades/html/03_hipervinculos/actividad1.html
@@ -16,6 +16,6 @@ provident laborum voluptatum?</p>
 laboriosam ipsam enim minus commodi ex nisi accusantium voluptates <br>
 quod quaerat a saepe tempora similique voluptatum ad totam placeat?</p>
 <a href="https://www.restaurantedongcheng.com/">Ver nuestra historia</a> <br>
-<a href="activitat 2.html">menu del dia</a>
+<a href="actividad2.html">menu del dia</a>
 </body>
 </html>
