--- a/actividades/html/07_formularios/actividad1.html
+++ b/actividades/html/07_formularios/actividad1.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>Formulario</h1>
-    <form action="
-    "></form>
+    <form action="actividad1.html">
+        <label for="id">
+            Nombre
+<input type="text" name="Nombre"> 
+        </label>
+    </form>
+
 </body>
 </html>
