--- a/actividades/html/07_formularios/actividad1.html
+++ b/actividades/html/07_formularios/actividad1.html
@@ -10,8 +10,22 @@
     <form action="actividad1.html">
         <label for="id">
             Nombre
-<input type="text" name="Nombre"> 
+<input type="text" name="Nombre"> <br> <br> <br>
+
         </label>
+        <label for="id">
+            Email
+            <input type="text" name="Email"> <br><br><br>
+            
+        </label>
+        <label for="id">
+            Mensaje
+            <input type="text" name="Mensaje">
+        </label>
+        <button type="submit">
+            enviar
+        </button>
+        
     </form>
 
 </body>
