--- a/actividades/html/07_formularios/actividad1.html
+++ b/actividades/html/07_formularios/actividad1.html
@@ -8,17 +8,17 @@
 <body>
     <h1>Formulario</h1>
     <form action="actividad1.html">
-        <label for="id">
+        <label for="Nombre">
             Nombre
 <input type="text" name="Nombre"> <br> <br> <br>
 
         </label>
-        <label for="id">
+        <label for="Email">
             Email
             <input type="text" name="Email"> <br><br><br>
             
         </label>
-        <label for="id">
+        <label for="Mensaje">
             Mensaje
             <input type="text" name="Mensaje">
         </label>
