--- a/actividades/html/formularios.html
+++ b/actividades/html/formularios.html
@@ -8,5 +8,7 @@
 <body>
     <h2>Formularios</h2>
     <a href="07_formularios/actividad1.html">Actividad 1</a>
+    <a href="07_formularios/actividad2.html">Actividad 2</a>
+    <a href="07_formularios/actividad3.html">Actividad 3</a>
 </body>
 </html>
