--- a/actividades/html/formularios.html
+++ b/actividades/html/formularios.html
@@ -10,5 +10,6 @@
     <a href="07_formularios/actividad1.html">Actividad 1</a>
     <a href="07_formularios/actividad2.html">Actividad 2</a>
     <a href="07_formularios/actividad3.html">Actividad 3</a>
+    <a href="07_formularios/actividad4.html">Actividad 4</a>
 </body>
 </html>
