--- a/actividades/html/08_multimedia/actividad1.html
+++ b/actividades/html/08_multimedia/actividad1.html
@@ -6,7 +6,32 @@
     <title>Document</title>
 </head>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/8GiwPS1X1C0?si=mUnDYOkiPet45B-8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/episode/46ihnaWAhKaLEtOa2pUasj?utm_source=generator" width="352" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <h1>Podcasts The Wild Project</h1>
+    <figure>
+        <figcaption>Blake -Hoy no</figcaption>
+        <img src="https://i1.sndcdn.com/artworks-000138554821-syzzc3-t500x500.jpg" alt="logo" width="300" height="200" >
+        <br>
+        <audio   
+        controls
+        src="musica/[yt-mp3.blog] BLAKE - HOY NO _SANTA MUERTE_.mp3"></audio>
+    </figure>
+    
+    <figure>
+        <figcaption>SIE777E,Peret Reyes -Embrujo</figcaption>
+        <img src="https://m.media-amazon.com/images/I/51Nkx1CG0gL._UXNaN_FMjpg_QL85_.jpg" alt="logo" width="300" height="200">
+        <br>
+        <audio 
+        controls
+        src="musica/[yt-mp3.blog] EMBRUJO - SIE777E, PERET REYES (Official Video).mp3"></audio>
+    </figure>
+    
+    <figure>
+        <figcaption>Central cee -Khabib</figcaption>
+        <img src="https://asset.kompas.com/crops/CJxsJYjcPQIQzGQKjbiFe_WmDqY=/110x0:1262x768/750x500/data/photo/2022/02/14/620a5960a96c7.png" alt="logo" width="300" height="200">
+        <br>
+        <audio 
+        controls
+        src="musica/[yt-mp3.blog] Central Cee - Khabib [Music Video].mp3"></audio>
+    </figure>
 </body>
 </html>
