--- a/actividades/activitats.html
+++ b/actividades/activitats.html
@@ -12,5 +12,8 @@
    <a href="html/listas.html"><h2>Listas</h2></a>
    <a href="html/imagenes.html"><h2>Imagenes</h2></a>
    <a href="html/tablas.html"><h2>Tablas</h2></a>
+   <a href="html/formularios.html"><h2>Formularios</h2></a>
+   <a href="html/multimedia.html"><h2>Multimedia</h2></a>
+   <a href="html/contenido.html"><h2>Contenido</h2></a>
 </body>
 </html>
