--- a/actividades/html/09_contenido/actividad1.html
+++ b/actividades/html/09_contenido/actividad1.html
@@ -6,7 +6,46 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header> 
+    <h1>Chuches</h1>
+    Chuches hay muchas, al igual que dulces, snacks, chocolates y <br>
+     golosinas en general. Sin embargo, sólo unas pocas se sitúan en <br>
+      el olimpo de las gominolas.
+  </header>
+  <main>
+    <section>
+      <h2>Marcas de chuches</h2>
+      <p>
+        <ul>
+        <li>Fini Golosinas</li>
+        <li>Vidal</li>
+        <li>Haribo</li>
+        <li>Chupachups</li>
+        <li>Damel</li>
+        <li>Kojak</li>
+        <li>Trolli</li>
+        <li>King Regal</li>
+        <li>Bulgari</li>
+      </ul>
+    </p>
+    </section>
+    <section>
+      <h2>Tipos de chuches</h2>
+      <ul>
+        <li>Ositos</li>
+        <img src="https://www.funtastyc.es/74044-large_default/ositos-brillo-jake-kg.jpg" alt="chuches ositos" height="100" width="100">
+        <li>Nubes</li>
+        <img src="https://www.marialunarillos.com/media/catalog/product/cache/42f2278094aa631428d36d824b72c9f1/n/u/nubes-de-az_car-rosas-y-blancas-lisas-_125_---fini.jpg" alt="chuches nubes" height="100" width="100">
+        <li>Ladrillos</li>
+        <li>Moras</li>
+        <li>Lenguas</li>
+        <li>Fresas</li>
+        <li>Plátanos</li>
+        <li>Coca-colas</li>
+        <li>Regalices</li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
 
