--- a/actividades/html/11_interactivos/actividad2.html
+++ b/actividades/html/11_interactivos/actividad2.html
@@ -18,8 +18,21 @@
         <option value="Huawei"></option>
         <option value="Sony"></option>
     </datalist>
-    <br>
-    <select name="" id=""></select>
+    <br><br>
+    <label for="precio">Rango de Precios:</label>
+  <select name="precio" id="precio">
+    <option value="0-100">0 - 100</option>
+    <option value="101-200">101 - 200</option>
+    <option value="201-300">201 - 300</option>
+    <option value="301-400">301 - 400</option>
+    <option value="401-500">401 - 500</option>
+    <option value="501-600">501 - 600</option>
+    <option value="601-700">601 - 700</option>
+    <option value="701-800">701 - 800</option>
+    <option value="801-900">801 - 900</option>
+    <option value="901-1000">901 - 1000</option>
+  </select>
+  
     
     
 </body>
