--- a/actividades/html/08_multimedia/actividad1.html
+++ b/actividades/html/08_multimedia/actividad1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Podcasts The Wild Project</h1>
+    <h1>Canciones</h1>
     <figure>
         <figcaption>Blake -Hoy no</figcaption>
         <img src="https://i1.sndcdn.com/artworks-000138554821-syzzc3-t500x500.jpg" alt="logo" width="300" height="200" >
