--- a/actividades/activitats.html
+++ b/actividades/activitats.html
@@ -15,6 +15,6 @@
    <a href="html/formularios.html"><h2>Formularios</h2></a>
    <a href="html/multimedia.html"><h2>Multimedia</h2></a>
    <a href="html/contenido.html"><h2>Contenido</h2></a>
-   <a href="html/11_interactivos/"><h2>Interactivos</h2></a>
+   <a href="html/interactivos.html"><h2>Interactivos</h2></a>
 </body>
 </html>
