--- a/actividades/html/interactivos.html
+++ b/actividades/html/interactivos.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>interactivos</h2>
+    <h2>Interactivos</h2>
     <a href="11_interactivos/actividad1.html">Actividad 1</a> 
     <br><br>
     <a href="11_interactivos/actividad2.html">Actividad 2</a>
