--- a/actividades/html/05_imagenes/actividad2.html
+++ b/actividades/html/05_imagenes/actividad2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../imagenes.html">Inicio</a>
 <body>
     <h1>Redes sociales</h1>
     <img src="https://th.bing.com/th/id/R.a33edfc6608bc6fec73bf08c685dbe1e?rik=zXajz428EfVJGw&pid=ImgRaw&r=0" alt="foto facebook" width="100" height="100"> <br>
