--- a/actividades/html/07_formularios/actividad1.html
+++ b/actividades/html/07_formularios/actividad1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../formularios.html">Inicio</a>
 <body>
     <h1>Formulario</h1>
     <form action="actividad1.html">
