--- a/actividades/html/11_interactivos/actividad2.html
+++ b/actividades/html/11_interactivos/actividad2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../interactivos.html"> Inicio</a>
 <body>
     <header><h1>Buscador de smartphone</h1></header>
     <label>Marca de smartphone:
@@ -32,7 +33,10 @@
     <option value="801-900">801 - 900</option>
     <option value="901-1000">901 - 1000</option>
   </select>
-  
+  <br>
+  <button type="submit">
+    buscar
+</button>
     
     
 </body>
