--- a/actividades/html/02_formato/actividad7.html
+++ b/actividades/html/02_formato/actividad7.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../formato.html">Inicio</a>
 <body>
     <h1>Mis últimas vacaciones</h1>
 <p>En mis ultimas vaciones fui a la playa, ya que tenemos un apartamento ahi, en <strong>Salou.</strong> <br>
