--- a/actividades/html/03_hipervinculos/actividad1.html
+++ b/actividades/html/03_hipervinculos/actividad1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../hipervinculos.html">Inicio</a>
 <body>
     <h1>Restaurante chino</h1>
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Qui nesciunt <br>
