--- a/actividades/html/03_hipervinculos/actividad3.html
+++ b/actividades/html/03_hipervinculos/actividad3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../hipervinculos.html">Inicio</a>
 <body>
     <body>
         <article class="group post">
