--- a/actividades/html/04_listas/actividad2.html
+++ b/actividades/html/04_listas/actividad2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../listas.html">Inicio</a>
 <body>
     <h1>Series épicas</h1>
     <ul>
