--- a/actividades/html/05_imagenes/actividad1.html
+++ b/actividades/html/05_imagenes/actividad1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../imagenes.html">Inicio</a>
 <body>
     <h1>Cafetería</h1>
     <p>Eget egestas purus viverra accumsan in nisl? Eget duis at tellus at urna <br>
