--- a/actividades/html/05_imagenes/actividad3.html
+++ b/actividades/html/05_imagenes/actividad3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../imagenes.html">Inicio</a>
 <body>
     <h1>Aparatox</h1>
     <h2>Makvook</h2>
