--- a/actividades/html/07_formularios/actividad3.html
+++ b/actividades/html/07_formularios/actividad3.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../formularios.html">Inicio</a>
 <body>
     <form action="">
         <h2>Registro en Red Social</h2>
