--- a/actividades/html/08_multimedia/actividad1.html
+++ b/actividades/html/08_multimedia/actividad1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../multimedia.html">Inicio</a>
 <body>
     <h1>Canciones</h1>
     <figure>
