--- a/actividades/html/formularios.html
+++ b/actividades/html/formularios.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../activitats.html">Inicio</a>
 <body>
     <h2>Formularios</h2>
     <a href="07_formularios/actividad1.html">Actividad 1</a>
+    <br><br>
     <a href="07_formularios/actividad2.html">Actividad 2</a>
+    <br><br>
     <a href="07_formularios/actividad3.html">Actividad 3</a>
+    <br><br>
     <a href="07_formularios/actividad4.html">Actividad 4</a>
 </body>
 </html>
