--- a/actividades/html/imagenes.html
+++ b/actividades/html/imagenes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../activitats.html">Inicio</a>
 <body>
     <h2>Imagenes</h2>
     <a href="05_imagenes/actividad1.html">Actividad 1</a>
