--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>MI PAGINA WEB :)</h1>
-   <a href="actividades/activitats.html"><h2>Actividades html</h2></a>
-   <a href="actividades/activitats.css"><h2>Actividades css</h2></a>
+   <a href="actividades/actividades.html"><h2>Actividades html</h2></a>
+   <a href="actividades/actividadescss.html"><h2>Actividades css</h2></a>
 </body>
 </html>
