--- a/actividades/actividades.html
+++ b/actividades/actividades.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<a href="../">Inicio</a>
 <body>
     <H1>HTML</H1>
    <a href="html/formato.html"> <h2>Formato</h2></a>
