--- a/actividades/css/03_selectores/actividad2.html
+++ b/actividades/css/03_selectores/actividad2.html
@@ -5,12 +5,44 @@
 	<title>Mis vacaciones</title>
     </head>
     <body>
-	<h1>Tenerife (Islas Canarias)</h1>
-	<h2>Subiendo a un volcán</h2>
-	<p>Mis amigos y yo nos propusimos subir andando hasta la cima del volcán más alto de España: el Teide. El calor nos abraso y a los pocos minutos vaciamos todas las cantimploras. A la hora siguiente notamos como las lagartijas nos perseguían con cierta distancia mientras se relamian los labios. Parecía que esa noche iban a cenar caliente.</p>
-	<p>Otra hora más tarde uno de mis amigos se torció el tobillo y decidimos abandonarlo a su suerte. Nunca más supimos de él, esperemos que esté en un sitio mejor.</p>
-	<p>La siguiente hora notamos la ausencia del oxígeno. Respirábamos porque teníamos el hábito. Dos más cayeron en el olvido.</p>
-	<p>La última hora notamos un poco de hambre de tanto andar. Optamos por el canibalismo.</p>
-	<p>Solo quedé yo. ¡Qué vistas! Hasta podía ver la isla de Gran Canaria. Valió la pena cada zancada, camiseta escurrida, agujetas en las piernas y perdidas humanas. Estaba a tanta altura que casi podía tocar las estrellas con la punta de mis dedos. Era la oportunidad de maravillarme del volcan y encontrar nuevos amigos.</p>
+        <style>
+ .titulo {
+color: aqua;
+} 
+.h2 {
+    color: brown;
+}
+.p1 {
+    color: coral;
+}
+.p2 {
+    color: magenta;
+}
+.p3 {
+    color: steelblue;
+}
+.p4 {
+    color: orange;
+}
+.p5 {
+    color: powderblue;
+}
+
+
+        </style>
+	<h1 class="titulo">Tenerife (Islas Canarias)</h1>
+	<h2 class="h2">Subiendo a un volcán</h2>
+	<p class="p1">Mis amigos y yo nos propusimos subir andando hasta la cima del volcán más alto de España: el Teide. <br>
+         El calor nos abraso y a los pocos minutos vaciamos todas las cantimploras. <br>
+         A la hora siguiente notamos como las lagartijas nos perseguían con cierta distancia mientras se relamian los labios. <br>
+          Parecía que esa noche iban a cenar caliente.</p>
+	<p class="p2">Otra hora más tarde uno de mis amigos se torció el tobillo y decidimos abandonarlo a su suerte. <br>
+        Nunca más supimos de él, esperemos que esté en un sitio mejor.</p>
+	<p class="p3">La siguiente hora notamos la ausencia del oxígeno. Respirábamos porque teníamos el hábito. <br>
+         Dos más cayeron en el olvido.</p>
+	<p class="p4">La última hora notamos un poco de hambre de tanto andar. Optamos por el canibalismo.</p>
+	<p class="p5">Solo quedé yo. ¡Qué vistas! Hasta podía ver la isla de Gran Canaria. <br>
+        Valió la pena cada zancada, camiseta escurrida, agujetas en las piernas y perdidas humanas. <br>
+         Estaba a tanta altura que casi podía tocar las estrellas con la punta de mis dedos. Era la oportunidad de maravillarme del volcan y encontrar nuevos amigos.</p>
     </body>
 </html>
