--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -9,5 +9,6 @@
 <body>
     <h1>CSS</h1>
     <a href="css/selectores.html"><h2>Selectores</h2></a>
+    <a href="css/variables.html"><h2>Variables</h2></a>
 </body>
 </html>
