--- a/actividades/css/selectores.html
+++ b/actividades/css/selectores.html
@@ -11,5 +11,7 @@
     <a href="03_selectores/actividad1.html">Actividad 1</a>
     <br><br>
     <a href="03_selectores/actividad2.html">Actividad 2</a>
+    <br><br>
+    <a href="03_selectores/actividad3.html">Actividad 3</a>
 </body>
 </html>
