--- a/actividades/css/variables.html
+++ b/actividades/css/variables.html
@@ -9,5 +9,6 @@
 <body>
     <h2>Variables</h2>
     <a href="04_variables/actividad1.html">Actividad 1</a>
+    <a href="04_variables/actividad2.html">Actividad 2</a>
 </body>
 </html>
