--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -10,5 +10,6 @@
     <h1>CSS</h1>
     <a href="css/selectores.html"><h2>Selectores</h2></a>
     <a href="css/variables.html"><h2>Variables</h2></a>
+    <a href="css/bem.html"><h2>BEM</h2></a>
 </body>
 </html>
