--- a/actividades/css/06_BEM/actividad1.html
+++ b/actividades/css/06_BEM/actividad1.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
+
     <header>
-        
+        <h1>Mi Página Web</h1>
+        <nav>
+            <ul>
+                <li><a href="#seccion1">Sección 1</a></li>
+                <li><a href="#seccion2">Sección 2</a></li>
+                <li><a href="#seccion3">Sección 3</a></li>
+            </ul>
+        </nav>
     </header>
+
+    <main>
+        <section id="seccion1">
+            <h2>Sección 1</h2>
+            <p>Contenido de la Sección 1...</p>
+        </section>
+
+        <section id="seccion2">
+            <h2>Sección 2</h2>
+            <p>Contenido de la Sección 2...</p>
+        </section>
+
+        <section id="seccion3">
+            <h2>Sección 3</h2>
+            <p>Contenido de la Sección 3...</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>Pie de página - © 2024</p>
+    </footer>
+
 </body>
 </html>
+
