--- a/actividades/css/06_BEM/actividad1.html
+++ b/actividades/css/06_BEM/actividad1.html
@@ -4,40 +4,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+       :root {
+        --color-destacado: aqua;
+       }
+       
+       h1 {
+        color: aqua;
+       }
+
+
+    </style>
 </head>
+
 <body>
 
     <header>
-        <h1>Mi Página Web</h1>
+        <h1>Oceanos</h1>
         <nav>
             <ul>
-                <li><a href="#seccion1">Sección 1</a></li>
-                <li><a href="#seccion2">Sección 2</a></li>
-                <li><a href="#seccion3">Sección 3</a></li>
+                <li><a href="#seccion1">Océano Indico</a></li>
+                <li><a href="#seccion2">Océano Pacífico</a></li>
+                <li><a href="#seccion3">Océano Atlántico</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section id="seccion1">
-            <h2>Sección 1</h2>
-            <p>Contenido de la Sección 1...</p>
+            <h2>Oceano Indico</h2>
+            <p>El Índico es la parte del océano mundial de la Tierra que baña las costas de África del Este, <br>
+                Oriente Medio, Asia del Sur y Australia. Es el tercer océano más grande por superficie y cubre <br>
+                aproximadamente el 20 % de la superficie del planeta. Delimita con el Atlántico por el meridiano 20° <br>
+                este (cabo de las Agujas), con el Pacífico por el meridiano 147° este y con el Antártico por el paralelo <br>
+                60° sur. El punto más al norte del Índico está aproximadamente a 30° norte de latitud en el golfo Pérsico. <br>
+                El volumen del océano se estima en 292 131 000 km³. <br>
+                </p>
+                <p>
+                Las naciones insulares del océano son Madagascar (cuarta isla más grande del mundo), Comores, <br>
+                Seychelles, Maldivas, Mauricio, y Sri Lanka; Indonesia lo bordea. Sirve como una ruta de tránsito entre <br>
+                Asia y África lo que lo ha convertido en un foco de conflictos. De todas maneras, ninguna nación lo ha <br>
+                dominado con éxito hasta los inicios del siglo xix cuando los ingleses colonizaron la mayoría de la <br>
+                tierra perimetral. El Índico fue llamado así porque baña las costas de la India. <br>
+                El océano Índico se conoce con su nombre actual al menos desde 1515, cuando se atestigua la forma latina Oceanus Orientalis Indicus ("océano Índico Oriental"), <br>
+                 llamado así por la India, que se proyecta en él. Anteriormente se le conocía como océano Oriental, <br>
+                  término que aún se utilizaba a mediados del siglo XVIII, en contraposición al océano Occidental (Atlántico) antes de que se conjeturara el Pacífico.
+
+            </p>
         </section>
 
         <section id="seccion2">
-            <h2>Sección 2</h2>
-            <p>Contenido de la Sección 2...</p>
+            <h2>Océano Pacífico</h2>
+            <p>El Pacífico es la parte del océano mundial de mayor extensión de la Tierra. <br>
+                Ocupa la tercera parte de su superficie y se extiende aproximadamente 15 500 kilómetros desde el mar de Bering limitando con <br>
+                el Glacial Ártico por el norte, hasta los márgenes congelados del mar de Ross y limitando por el sur con la Antártida.<br>
+                Alcanza su mayor anchura (del orden de 19 800 km) aproximadamente a 5 grados de latitud norte, <br>
+                extendiéndose desde Indonesia hasta la costa de Colombia. Se entiende que el límite occidental del océano está en el estrecho de Malaca.
+            </p>
+            <p>
+                El Pacífico contiene aproximadamente 25 000 islas (más que todos los demás océanos del mundo juntos) <br>
+                casi todas las cuales están ubicadas al sur de la línea ecuatorial. Cubre un área de 155 557 000 km². <br>
+                El punto más bajo de la superficie de la corteza terrestre, la fosa de las Marianas se encuentra en el Pacífico. <br>
+
+            </p>
+            <p>
+                El océano Pacífico solo se comunica con el océano Atlántico a través de cuatro conexiones: los pasos <br>
+                naturales en el extremo austral americano, el estrecho de Magallanes, el Canal de Beagle y el mar de Drake, así como una conexión artificial, el canal de Panamá.
+            </p>
+            <p>
+                El primer europeo en ver el océano Pacífico desde la orilla americana fue el hidalgo y explorador <br>
+                español Andrés Contero en la expedición de Vasco Núñez de Balboa, quien, tras cruzar el istmo de <br>
+                Panamá, tomó posesión de sus aguas en nombre de los reyes de España el día 25 de septiembre de 1513, y le otorgó el nombre de mar del Sur.
+            </p>
+            <p>
+                Unos años más tarde, el navegante español de origen portugués Fernando de Magallanes durante su <br>
+                circunnavegación de la Tierra al servicio de la Corona de España, le dio el nombre de Pacífico por <br>
+                encontrarse aguas tranquilas durante la mayor parte de su viaje tras cruzar el estrecho de Magallanes. <br>
+                Sin embargo, el Pacífico no siempre hace honor a su nombre, pues a menudo los tifones, los <br>
+                huracanes, y la actividad sísmica y volcánica golpean las islas de este océano y los litorales continentales.<br>
+                En el océano Pacífico Sur entre los 176° y 80° longitud oeste, y entre los 27° y 60° latitud sur no existen islas o tierra emergida.
+
+            </p>
         </section>
 
         <section id="seccion3">
-            <h2>Sección 3</h2>
-            <p>Contenido de la Sección 3...</p>
+            <h2>Océano Atlántico</h2>
+            <p>El Atlántico es la parte del océano mundial de la Tierra que separa América —al oeste— de Europa y África —al este—. <br>
+                Se extiende desde el océano Glacial Ártico, en el norte, hasta el Antártico, en el sur. Es el segundo océano más extenso de la Tierra tras el Pacífico. <br>
+                Ocupa el 20 % de la superficie del planeta, y el 26 % del total de tierras sumergidas. <br>
+                Es además el océano más joven del planeta, formado hace 200 millones de años​ por la división del supercontinente Pangea.
+            </p>
+            <p>
+                El Atlántico es un agente de importancia global en lo referente al clima, ya que de sus corrientes depende en buena medida el clima de los continentes ribereños. <br>
+                A lo largo de la historia ha supuesto una barrera cultural que ha separado los llamados Viejo y Nuevo Mundo hasta la llegada de la Era de los Descubrimientos, <br>
+                lo que supuso para el océano convertirse en un punto de intercambio comercial y cultural. <br>
+                Actualmente no ha perdido su importancia geoestratégica, convirtiéndose en escenario de grandes batallas desde el siglo xix hasta ser escenario de conflictos en la Guerra Fría.
+            </p>
+            <p>
+                El ecuador terrestre lo divide artificialmente en dos partes, Atlántico Norte y Atlántico Sur. <br>
+                Su nombre procede del griego Atlas, uno de los titanes de la mitología griega. <br>
+                Alcanza su máxima profundidad en la fosa de Puerto Rico.
+            </p>
+            <p>
+                Se comunica artificialmente con el océano Pacífico a través del canal de Panamá, de forma natural a través del estrecho de Magallanes y el pasaje de Drake, <br>
+                con el océano Índico a través del canal de Suez y el sur de África.
+            </p>
         </section>
     </main>
 
-    <footer>
-        <p>Pie de página - © 2024</p>
-    </footer>
+    
 
 </body>
 </html>
