--- a/actividades/css/06_BEM/actividad1.html
+++ b/actividades/css/06_BEM/actividad1.html
@@ -28,6 +28,12 @@
                 <li><a href="#seccion3">Océano Atlántico</a></li>
             </ul>
         </nav>
+        <div id="search-form">
+            <form action="#seccion1" method="get">
+              <input type="text" id="search-input" name="q" placeholder="Buscar...">
+              <button type="submit" id="search-button">Buscar</button>
+            </form>
+          </div>
     </header>
 
     <main>
