--- a/actividades/css/07_color/actividad1.html
+++ b/actividades/css/07_color/actividad1.html
@@ -4,12 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   
-</head>
-<body>
-    Eastman <font color="yellow"> Kodak </font> Company (popularmente conocida como <font color="yellow">Kodak</font>)es una compañía <br>
-    multinacional fundada el año <font backgroundcolor="blue">1892</font>
-    
+    <style>
 
+        .Kodak {
+            color: yellow;
+        }
+
+        .año {
+            background-color: blue;
+            color: white;
+        }
+
+        .morado {
+            color: violet;
+            opacity: 0.5;
+        }
+
+        .verde {
+            background-color: forestgreen;
+            color: white;
+        }
+    </style>
+</head>
+<a href="../color.html">Inicio</a>
+<body>
+<p> <strong>Eastman</strong> <span class="Kodak"> Kodak</span><strong> Company</strong> (popularmente conocida como <span class="Kodak">Kodak</span>) es una compañía<br>
+multinacional fundada el año <span class="año">1892</span> en los Estados Unidos dedicada al diseño,<br>
+producción y comercialización de equipamiento fotográfico. Durante más de <span class="año">cien años </span><br>
+ha sido una empresa muy conocida por sus <span class="morado">cámaras y películas fotográficas</span> y<br>
+actualmente esta reorientando su actividad hacia dos mercados principales: la fotografía<br>
+digital y la <span class="morado">impresión digital</span>, aunqye hay pocas veces en que se orienta a la <span class="morado">fotografía<br>
+analógica </span>en la actualidad. Desde <span class="año">2020</span> comercializa además productos <span class="verde">farmacéuticos</span></p>
 </body>
 </html>
