--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -11,5 +11,6 @@
     <a href="css/selectores.html"><h2>Selectores</h2></a>
     <a href="css/variables.html"><h2>Variables</h2></a>
     <a href="css/bem.html"><h2>BEM</h2></a>
+    <a href="css/color.html"><h2>Color</h2></a>
 </body>
 </html>
