--- a/actividades/css/06_BEM/actividad1.html
+++ b/actividades/css/06_BEM/actividad1.html
@@ -21,6 +21,7 @@
 
     <header>
         <h1>Oceanos</h1>
+        <img src="fotos/francesco-ungaro-oAYAdQkoEY4-unsplash-1440x1080.jpg" alt="logo" width="250" height="250">
         <nav>
             <ul>
                 <li><a href="#seccion1">Océano Indico</a></li>
