--- a/actividades/css/texto.html
+++ b/actividades/css/texto.html
@@ -7,9 +7,7 @@
 </head>
 <a href="../actividadescss.html">Inicio</a>
 <body>
-    <h2>Color</h2>
-    <a href="07_color/actividad1.html">Actividad 1</a>
-    <a href="07_color/actividad2.html">Actividad 2</a>
-    <a href="07_color/actividad3.html">Actividad 3</a>
+    <h2>Texto</h2>
+    <a href="08_texto/actividad1.html">Actividad 1</a>
 </body>
 </html>
