--- a/actividades/css/08_texto/actividad4.html
+++ b/actividades/css/08_texto/actividad4.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        
+        h1 {
+            @font-face {
+                font-family: skincake ;
+                src: url("skincake.ttf");
+            }
+        }
     </style>
 </head>
-<a href="../actividadescss.html">Inicio</a>
 <body>
-    <h2>BEM</h2>
-    <a href="06_bem/actividad1.html">Actividad 1</a>
-    <a href="06_bem/"></a>
+<h1>fanta</h1>
 </body>
 </html>
