--- a/actividades/actividadescss.html
+++ b/actividades/actividadescss.html
@@ -12,5 +12,7 @@
     <a href="css/variables.html"><h2>Variables</h2></a>
     <a href="css/bem.html"><h2>BEM</h2></a>
     <a href="css/color.html"><h2>Color</h2></a>
+    <a href="css/texto.html"><h2>Texto</h2></a>
+    <a href="css/medidas.html"><h2>Medidas</h2></a>
 </body>
 </html>
