--- a/actividades/css/texto.html
+++ b/actividades/css/texto.html
@@ -9,5 +9,9 @@
 <body>
     <h2>Texto</h2>
     <a href="08_texto/actividad1.html">Actividad 1</a>
+    <a href="08_texto/actividad2.html">Actividad 2</a>
+    <a href="08_texto/actividad3.html">Actividad 3</a>
+    <a href="08_texto/actividad4.html">Actividad 4</a>
+    <a href="08_texto/actividad5.html">Actividad 5</a>
 </body>
 </html>
