--- a/actividades/css/12_margin/actividad1.html
+++ b/actividades/css/12_margin/actividad1.html
@@ -4,17 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-
-    </style>
 </head>
+<style>
+p {
+    margin-right: 1rem;
+    margin-bottom: 3.5rem;
+    margin-top: 0.20rem;
+}
+
+h1 {
+    font-weight: bolder;
+    margin-bottom: 0.1rem;
+}
+
+h2 {
+    font-weight: bolder;
+
+}
+</style>
 <body>
-    <h1><strong>Luz de la luna</strong></h1>
+    <h1>Luz de la luna</h1>
     <p>Vitae aliquet nec, ullamcorper sit amet risus nullam eget felis eget nunc <br>
-    lobortis mattis aliquam faucibus! Faucibus pulvinar elementum integer enim <br>
-    neque, volutpat ac tincidunt vitae, semper quis lectus nulla.
-    </p>
-    <br><br><br><br><br>
+        lobortis mattis aliquam faucibus! Faucibus pulvinar elementum integer enim <br>
+        neque, volutpat ac tincidunt vitae, semper quis lectus nulla.
+        </p>
     <h2>Gracias</h2>
 </body>
 </html>
